--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,8 +4,8 @@ main {
   min-height: 100vh;
   background-color: #494949;
   opacity: 1;
-  background-image: radial-gradient(#fba82c81 1px, transparent 1px),
-    radial-gradient(#fba82c81 1px, #494949 1px);
+  background-image: radial-gradient(#5e5e5e 1px, transparent 1px),
+    radial-gradient(#5e5e5e 1px, #494949 1px);
   background-size: 40px 40px;
   background-position: 0 0, 20px 20px;
 
