--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,17 +1,18 @@
-<h3>Get In Touch</h3>
-
-<p class="text text-b" style="text-align: center">
-  I’m currently looking for new opportunities, feel free to contact me through
-  my
-  <a class="text text-b contact-me" href="mailto:gunars.lazdans@gmail.com"
-    >email</a
-  >
-  or drop a message in
-  <a
-    class="text text-b contact-me"
-    target="_blank"
-    href="https://www.linkedin.com/in/%E2%9A%A1-gunars-lazdans-%E2%9A%A1-346443155/"
-    >LinkedIn</a
-  >. Whether you have a question or just want to say hi, I’ll try my best to get
-  back to you!
-</p>
+<h3 inViewport (inViewportAction)="this.addClass($event)">Get In Touch</h3>
+<div class="contact" inViewport (inViewportAction)="this.addClass($event)">
+  <p class="text text-b" style="text-align: justify">
+    I’m currently looking for new opportunities, feel free to contact me through
+    my
+    <a class="text text-b contact-me" href="mailto:gunars.lazdans@gmail.com"
+      >email</a
+    >
+    or drop a message in
+    <a
+      class="text text-b contact-me"
+      target="_blank"
+      href="https://www.linkedin.com/in/%E2%9A%A1-gunars-lazdans-%E2%9A%A1-346443155/"
+      >LinkedIn</a
+    >. Whether you have a question or just want to say hi, I’ll try my best to
+    get back to you!
+  </p>
+</div>
