--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -16,12 +16,12 @@
       class="proj-cont"
     >
       <div class="text text-b">
-        At "The Workshop - Inventors of Play" my main Fronted related tasks was
-        done on Sportsbook platform. At the time there was total of 5 different
-        Sportsbook brand sites, each for a different region and with it's own
-        design nuances, color palattes, and variations. The challenging part of
-        this was the fact that all of these sites had to build from the same
-        code, taking into consideration desktop and mobile views.
+        At "The Workshop - Inventors of Play" my main Fronted related tasks
+        revolved around UI/UX improvements for sports betting platform. There
+        where serveral different sites running from the same Angular/Typescript
+        code, tested with Jasmine, Karma and Cypress, deployments where done
+        using CI/CD pipelines. Development was done in two week sprint cycles,
+        aimed on delivering customers value as soon as posible.
       </div>
     </div>
   </div>
