--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -6,7 +6,7 @@
       <div class="text-b long slideUp3" style="float: left">I'm a</div>
       <div
         class="text-b long yellow slideUp3"
-        style="float: left; margin-left: 5px; margin-right: 5px"
+        style="float: left; margin-left: 5px; margin-right: -25px"
       >
         Front-end Developer
       </div>
@@ -19,7 +19,7 @@
   </div>
 
   <div class="prof slideUp3">
-    <img src="assets/me-prof2.png" alt="Me" />
+    <img src="assets/me.png" alt="Me" style="left: 0" />
     <div class="spinner v1"></div>
     <div class="spinner v2"></div>
     <div class="spinner v3"></div>
