--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -25,8 +25,8 @@
   height: 300px;
   border-radius: 150px;
   position: absolute;
-  /* border: 3px solid #fba92c; */
-  /* background-color: #fba92c; */
+  /* border: 3px solid #ffc107; */
+  /* background-color: #ffc107; */
 }
 
 .intro-wrapper {
@@ -69,7 +69,7 @@
 }
 
 .yellow {
-  color: #fba92c;
+  color: #ffc107;
 }
 
 @-webkit-keyframes slideUp {
@@ -107,9 +107,16 @@
   }
 }
 
-.spinner {
-  border-top: 4px solid #fba92c;
+.spinner:nth-child(even) {
+  border-top: 4px solid #ffc107;
   border-bottom: 4px solid #ffffff;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.spinner:nth-child(odd) {
+  border-top: 4px solid #2579bc;
+  border-bottom: 4px solid #61c8d5;
   border-radius: 50%;
   position: absolute;
 }
