--- a/src/app/work-exp/work-exp.component.css
+++ b/src/app/work-exp/work-exp.component.css
@@ -31,7 +31,7 @@ mat-expansion-panel .mat-expanded {
 
 .mat-expansion-panel-header.mat-expanded {
   animation: boldMove 0.8s ease-in;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 mat-expansion-panel-header {
