--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body {
 h3 {
   font-size: 40px;
   display: flex;
-  color: #ffc107;
+  /* color: #ffc107; */
   padding: 15px;
   text-align: center;
   font-family: monospace;
@@ -27,9 +27,10 @@ h3::after {
   display: block;
   position: relative;
   width: 5ch;
-  height: 1px;
+  height: 4px;
   margin-left: 20px;
-  background-color: #ffc107;
+  border-radius: 2px;
+  background: linear-gradient(90deg, #ffffff, rgba(255, 255, 255, 0));
 }
 
 h3::before {
@@ -37,9 +38,10 @@ h3::before {
   display: block;
   position: relative;
   width: 5ch;
-  height: 1px;
+  height: 4px;
   margin-right: 20px;
-  background-color: #ffc107;
+  border-radius: 2px;
+  background: linear-gradient(-90deg, #ffffff, rgba(255, 255, 255, 0));
 }
 
 .content-container {
