--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,8 +8,10 @@
       class="text text-b"
     >
       Enthusiastic guy with 10 years of experience in the IT industry. For the
-      major part of my IT career I have worked in the field of Quality Assurance
-      but in my latest career change I have moved to Front-end development
+      major part of my IT career, I have worked in the field of Quality
+      Assurance but in my latest step I have moved to Front-end development.
+      During my carreer I have gained a lot of experience working in agile/scrum
+      methodology on complex products with millions of users.
     </div>
     <br />
     <div
@@ -17,25 +19,15 @@
       (inViewportAction)="this.addClass($event)"
       class="text text-b"
     >
-      Strong logical and analytical thinking to find solutions for various
-      problems that can occur in the software development process and find
-      solutions to guarantee delivered software quality and good user
-      experience. Every pixel counts
-    </div>
-    <br />
-    <div
-      inViewport
-      (inViewportAction)="this.addClass($event)"
-      class="text text-b"
-    >
-      Technology focus:
+      My technology focus:
       <br />
       <span class="tech">
+        <span class="skill">Angular</span>
         <span class="skill">TypeScript</span>
+        <span class="skill">JavaScript</span>
         <span class="skill">HTML</span>
         <span class="skill">CSS</span>
-        <span class="skill">SCSS</span>
-        <span class="skill">JavaScript</span>
+        <span class="skill">Sass</span>
         <span class="skill">FireBase</span>
       </span>
     </div>
