--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -2,12 +2,9 @@
   <div class="intro">
     <h2>
       <div class="text-b yellow slideUp">Hi, my name is</div>
-      <h1 class="my-name text-b slideUp">Gunars Lazdans</h1>
+      <div class="my-name text-b slideUp">Gunars Lazdans</div>
       <div class="text-b long slideUp3" style="float: left">I'm a</div>
-      <div
-        class="text-b long yellow slideUp3"
-        style="float: left; margin-left: 5px; margin-right: -25px"
-      >
+      <div class="text-b long frontend slideUp3" style="float: left">
         Front-end Developer
       </div>
       <div class="text-b long slideUp3" style="background-color: transparent">
