--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -7,11 +7,19 @@
       (inViewportAction)="this.addClass($event)"
       class="text text-b"
     >
-      Enthusiastic guy with 10 years of experience in the IT industry. For the
-      major part of my IT career, I have worked in the field of Quality
-      Assurance but in my latest step I have moved to Front-end development.
-      During my carreer I have gained a lot of experience working in agile/scrum
-      methodology on complex products with millions of users.
+      Enthusiastic guy with 10 years of experience in the IT industry. I started
+      my IT carrier by working in the Quality Assurance specialty for 8 years,
+      it all began with manual testing, but soon after that I started to get
+      more and more exposure to test automation and by that, I started to
+      increase my technical skills. Later down the line I was able to transition
+      to a software development position and worked as a Frontend Engineer for 2
+      years.
+      <br />
+      <br />
+      During my career I have gained a lot of experience working in agile/scrum
+      methodology on projects with complex architecture and millions of users,
+      working closely with my team to deliver value to the production
+      environment as soon as possible.
     </div>
     <br />
     <div
