--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -130,6 +130,7 @@
 .spinner.v1 {
   width: 286px;
   height: 286px;
+  opacity: 0;
   animation: spin 3s linear infinite;
   margin: 7px;
 }
@@ -137,6 +138,7 @@
 .spinner.v2 {
   width: 294px;
   height: 294px;
+  opacity: 0;
   animation: spin2 3.5s linear infinite;
   margin: -3px;
 }
@@ -144,6 +146,7 @@
 .spinner.v3 {
   width: 300px;
   height: 300px;
+  opacity: 0;
   animation: spin 4s linear infinite;
 }
 
@@ -152,6 +155,12 @@
   height: 310px;
   animation: spin2 5s linear infinite;
   margin: -5px;
+  opacity: 0;
+}
+
+.spinner.show-me {
+  opacity: 1;
+  transition: all ease-in 2s;
 }
 
 @keyframes spin {
