--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<h3>About me</h3>
+<h3 inViewport (inViewportAction)="this.addClass($event)">About me</h3>
 
 <div class="about">
   <div class="about_bulletpoints">
