--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,4 +1,4 @@
-<h3>Education</h3>
+<h3 inViewport (inViewportAction)="this.addClass($event)">Education</h3>
 
 <div class="ed-main-wrapper">
   <div class="pic-weapper">
