--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<h3>Portfolio</h3>
+<h3 inViewport (inViewportAction)="this.addClass($event)">Portfolio</h3>
 
 <div class="proj-wrapper">
   <div class="proj-wrapper-item project a">
