--- a/src/app/work-exp/work-exp.component.html
+++ b/src/app/work-exp/work-exp.component.html
@@ -1,4 +1,4 @@
-<h3>Work Experience</h3>
+<h3 inViewport (inViewportAction)="this.addClass($event)">Work Experience</h3>
 <mat-accordion>
   <mat-expansion-panel
     inViewport
